Add markdown preview

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import 'tailwindcss/utilities';
+@plugin "@tailwindcss/typography";
 
 /* @import "tailwindcss/preflight"; */
 /* @import 'tailwindcss/base'; */
